나름 완성본

--- a/.bowerrc
+++ b/.bowerrc
@@ -1,3 +1,6 @@
 {
-  "directory": "./www/src/bower_components"
+  "directory": "./www/src/bower_components",
+  "resolvers": [
+    "bower-npm-resolver"
+  ]
 }
