--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "angular": "angularjs#^1.5.8"
+    "angular": "angularjs#^1.5.8",
+    "angular-chart.js": "^1.0.2"
   }
 }
