--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "angular": "angularjs#^1.5.8",
-    "angular-chart.js": "^1.0.2"
+    "angular-chart.js": "^1.0.2",
+    "font-awesome": "^4.6.3"
   }
 }
